ci: prevent release loop

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,7 +5,10 @@ on:
       - main
       - dev
       - release
-
+    tags-ignore:
+      - v*
+    paths-ignore:
+      - 'CHANGELOG.md'
 permissions: read-all
 
 jobs:
