--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - 'release*' # release branches
+      - 'release/*' # release branches
     tags-ignore:
       - v*
     paths-ignore:
