--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,8 @@ on:
       - v*
     paths-ignore:
       - 'CHANGELOG.md'
-permissions: read-all
+permissions:
+  contents: write
 
 jobs:
   release:
