--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,9 @@ jobs:
       - name: Rebase dev branch on master
         if: success()
         run: |
+          git config user.name "Soleil Cotterell"
+          git config user.email "soleilari@gmail.com"
+
           git checkout main
           git pull
           git checkout dev
