--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "soleil/release-test",
     "description": "Testing my release strategy",
+    "version": "1.9.0"
     "autoload": {
         "psr-4": {
             "HelloWorld": "src/"
