--- a/.github/workflows/version-check-test.yaml
+++ b/.github/workflows/version-check-test.yaml
@@ -16,6 +16,7 @@ jobs:
         id: check_version_changes
         run: |
           changed_lines=$(git diff -r --unified=0 ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} -- composer.json | grep -c "version")
+          echo $changed_lines
           if [ $changed_lines -ne 0 ]; then
             echo "Error: version in composer.json should not be updated manually."
             exit 1
