--- a/.github/workflows/version-check-test.yaml
+++ b/.github/workflows/version-check-test.yaml
@@ -15,14 +15,6 @@ jobs:
       - name: Check Version Key Update
         id: check_version_changes
         run: |
-            if git diff -r --unified=0 d07d0cea7b0affbf1fe2414c4fb06ddba3378548 2ca1292788f691d7a31d57f3de0433e8edf35d3c -- composer.json; then
-                changed_lines=$(git diff -r --unified=0 d07d0cea7b0affbf1fe2414c4fb06ddba3378548 2ca1292788f691d7a31d57f3de0433e8edf35d3c -- composer.json | grep -c "version")
-                echo "$changed_lines"
-                if [ "$changed_lines" -eq 0 ]; then
-                    echo "Error: version in composer.json should not be updated manually."
-                    exit 1
-                fi
-            fi
-            exit 0
+          git diff -r --unified=0 ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} -- composer.json | grep -c "version"
 
 
